--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.6
   dio: ^5.4.0
   cached_network_image: ^3.3.0
+  crypto: ^3.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
